MID-10351: Do not use immutableList in QueryFactory.createAndOptimized
(cherry picked from commit c178acd6d38be42a3eb47e460633c7652fc000f6)